# funcasting

./: .gitignore  README.md  Session.vim  TODO.md  main.py  notes.md  pyproject.toml
data/: databento_ohlc.csv  tiingo_sample.csv
notebooks/: a.py  all_test.py  arma.py  bootstraps.py  cma_test.py  compile_forecasting.py  cvxp.py  dep_measure_tests.py  dist_fitting.py  ellips.py  ep_tests.py  factors_test.py  fft.py  final_forecasting.py  fun_animations.py  functions.py  get_factors.py  invariances.py  new_data.py  period_ftest.py  pipeline_test.py  portolio.py  preprocess_pipe.py  prob_visuals.py  prob_weights.py  rand.py  rand_tests.py  refactor_test.py  risk_tests.py  signals.py  sim_moments.py  stochastic_process_1.py  tests.py  testts.py  ts.py  univariate_pipeline.py  vol_modelling.py
notebooks/archive/: arma.py  seasonality_diags.py  vol_modelling.py
notebooks/examples/: advanced_entropy_pooling.py  simple_cma_example.py
notebooks/intro/: scenario_probabilities.py  simple_entropy_pooling.py
qraft/: globals.py
qraft/pipelines/: forecasting.py
qraft/portfolio/: __init__.py  construction.py  forecast.py  pre_built.py  risk.py
qraft/probability/: distributions.py
qraft/scenarios/: __init__.py  entropy_pooling.py  views_builder.py
qraft/signals/: raw_signals.py  signal_processing.py
qraft/simulation/: simulate_paths.py  state.py
qraft/utils/: tiingo.py  visuals.py
src/: get_data.py  globals.py  helpers.py  policy.py  template.py
src/cma/: core.py  distributions.py  operations.py
src/data_types/: scenarios.py  vectors.py
src/flex_probs/: constraints.py  core.py  ep.py  ep_engine.py  operations.py  prob_vectors.py  views_builder.py  visuals.py
src/maths/: constraints.py  core.py  distributions.py  helpers.py  non_parametric.py  operations.py  prob_vectors.py  sampling.py  stat_tests.py  time_series.py  visuals.py
src/methods/: cma.py  ep.py  forecasting_pipeline.py  fos_2.py  model_selection_pipeline.py  pp_v2.py  preprocess_pipeline.py  simulation_forecasting.py  univariate_time_series.py
src/models/: cma.py  prob.py  scenarios.py  views.py  views_builder.py
src/pipelines/: fitted_universe.py  forecasting.py  model_selection.py  preprocess.py  simulation_forecasting.py
src/portfolio/: __init__.py  construction.py  (+6 more)
tests/: test_core.py  test_entropy_pooling.py  test_maths.py  test_periodogram_seasonality.py
(+87 files in other folders)
