[project]
name = "funcasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "copulae>=0.8.0",
    "cvxpy>=1.7.3",
    "databento>=0.63.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "scipy>=1.16.1",
]

[tool.setuptools]
packages = ["stats", "models", "flex_probs"]
package-dir = {"" = "src"}



[tool.basedpyright]
typeCheckingMode = "recommended"
failOnWarnings = false
allowedUntypedLibraries = ['pydantic', 'requests']
reportExplicitAny = false
reportAny = false
reportMissingTypeStubs = false

